fixed some spacing

--- a/css/about.css
+++ b/css/about.css
@@ -9,12 +9,11 @@
     height: 50%;
     justify-content: center;
     align-items: center;
-    margin-bottom: 2%;
 }
 
 #profilePic{
     width: 360px;
-    height: 380px;
+    height: 400px;
     border-radius: 6px;
     background-image: url('../assets/img/profilePic.jpg');
     background-size: 100% auto;
@@ -30,7 +29,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 15vw;
+    margin-left: 5vw;
     z-index: 5;
 }
 
@@ -39,7 +38,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 15vw;
+    margin-right: 5vw;
     z-index: 5;
 }
 
@@ -54,8 +53,9 @@
 
 #introList{
     list-style: none;
-    font-size: 20px;
-    margin: 0
+    font-size: 23px;
+    margin: 0;
+    font-weight: 300;
 }
 
 #introList li{
@@ -69,7 +69,7 @@
 }
 
 #introList li div i{
-    margin-right: 25px;
+    margin-right: 20px;
     color: var(--accent)
 }
 
