--- a/css/contact.css
+++ b/css/contact.css
@@ -11,11 +11,6 @@
     z-index: 5;
 }
 
-#contactContainer h3{
-    margin-bottom: 6%;
-    font-size: 30px;
-}
-
 #inputsContainer{
     display: flex;
     flex-direction: column;
@@ -36,6 +31,7 @@
 
 #inputsContainer textarea{
     padding-left: 10px;
+    padding-top: 4px;
     width: 40vw;
     border: none;
     resize: none;
@@ -74,6 +70,7 @@
     border-radius: 5px;
     box-sizing: border-box;
     box-shadow: 0 8px 16px 0 rgba(0,0,0, .2);
+    margin-top: 5%;
 }
 
 #submitButtonContainer{
