--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,9 @@
     --backgroundColor: #A0AECD;
     --textColor: #333 */
 
-    --accent: #5cdb95;
+    --accent: #6987C9;
     --backgroundColor: #1a1a1d;
-    --textColor: #fafafa
+    --textColor: #ffffff
 }
 
 html{
